--- a/sberp/src/main/webapp/WEB-INF/web.xml
+++ b/sberp/src/main/webapp/WEB-INF/web.xml
@@ -36,6 +36,8 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
+<!-- 마스터 -->
+
     <!-- TODO : 시큐리티 초기 동작은 확인함. 추후 개발시 주석 해제 -->
     <!--보안 절차를 위해서는 모든 요청이 spring security 필터를 걸쳐가도록 함-->
 <!-- 	<filter> -->
